samples/_failures_safe/1761632651_b1f8a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c887282c.c: In function ‘main’:
./samples/SAFE/__tmp_c887282c.c:179:5: error: expected identifier or ‘(’ at end of input
  179 |     char
      |     ^~~~
./samples/SAFE/__tmp_c887282c.c:179:5: error: expected declaration or statement at end of input
